switch the site theme to rats

--- a/index.html
+++ b/index.html
@@ -2,63 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CatPhotoApp</title>
+    <title>RatPhotoApp</title>
   </head>
 <body>
      <main>
-      <h1>CatPhotoApp</h1>
+      <h1>RatPhotoApp</h1>
       <section>
-        <h2>Cat Photos</h2>
-        <!-- TODO: Add link to cat photos -->
-        <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
-        <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+        <h2>Rat Photos</h2>
+        <!-- TODO: Add link to rat photos -->
+        <p>See more <a target="_blank" href="https://www.google.com/search?q=rat+photos&sca_esv=585670897&tbm=isch&sxsrf=AM9HkKmAdeodwD0ndud5SyZHtspNCWyTIQ:1701107057341&source=lnms&sa=X&ved=2ahUKEwiCo4LP3eSCAxX1ReUKHeWDCxQQ_AUoAXoECAEQAw&biw=1045&bih=658&dpr=1.88">rat photos</a> .</p>
+        <img src="images/beltran.jpg" alt="A cute grey rat.">
       </section>
       <section>
-        <h2>Cat Lists</h2>
-        <h3>Things cats love:</h3>
+        <h2>Rat Lists</h2>
+        <h3>Things rats love:</h3>
         <ul>
           <li>Food</li>
           <li>Chew Toys</li>
           <li>Exercise and Play</li>
         </ul>
         <figure>
-          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-          <figcaption>Cats <em>love</em> lasagna.</figcaption>  
+          <img src="images/beltran2.webp" alt="A rat eating cheese.">
+          <figcaption>Rats <em>love</em> cheese.</figcaption>  
         </figure>
-        <h3>Top 3 things cats hate:</h3>
+        <h3>Top 3 things rats hate:</h3>
         <ol>
-          <li>flea treatment</li>
-          <li>thunder</li>
-          <li>other cats</li>
+          <li>Peppermint</li>
+          <li>Ammonia</li>
+          <li>Owls or predators</li>
         </ol>
         <figure>
-          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
-          <figcaption>Cats <strong>hate</strong> other cats.</figcaption>  
+          <img src="images/Owl.jpg" alt="Owl in the forest.">
+          <figcaption>Rats <strong>hate</strong> owls.</figcaption>  
         </figure>
       </section>
       <section>
-        <h2>Cat Form</h2>
-        <form action="https://freecatphotoapp.com/submit-cat-photo">
+        <h2>Rat Form</h2>
           <fieldset>
-            <legend>Is your cat an indoor or outdoor cat?</legend>
+            <legend>Is your rat an indoor or outdoor pet?</legend>
             <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
             <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
           </fieldset>
           <fieldset>
-            <legend>What's your cat's personality?</legend>
+            <legend>What's your rat's personality?</legend>
             <input id="loving" type="checkbox" name="personality" value="loving" checked> <label for="loving">Loving</label>
             <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy">Lazy</label>
             <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
           </fieldset>
-          <input type="text" name="catphotourl" placeholder="cat photo URL" required>
+          <input type="text" name="ratphotourl" placeholder="rat photo URL" required>
           <button type="submit">Submit</button>
         </form>
       </section>
     </main>
     <footer>
-      <p>
-        No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
-      </p>
     </footer>
 </body>
 </html>
